<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  	<!--  Project specific -->
  	<groupId>org</groupId>
  	<artifactId>DECIDE</artifactId>
  	<version>0.0.9</version>  	
  	<name>DECIDE</name>
  	<packaging>jar</packaging>
  	<url>http://maven.apache.org</url>
  
  
  	<!--  Properties -->
	<properties>
		<jdk.version>11</jdk.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- <log4j.configuration>./resources/log4j.properties</log4j.configuration> -->
	</properties>
	

  	<!-- Repositories -->
	<repositories>
		<repository>
			<name>Local repository</name>
	   		<id>localRepository</id>
        	<url>file://${project.basedir}/libs</url>
	 	</repository>
	</repositories>
	
	
	<!-- Dependencies -->
	<dependencies>
	
		<!-- JUnit -->
	    <dependency>
	    	<groupId>junit</groupId>
	      	<artifactId>junit</artifactId>
			<version>4.12</version>
	      	<scope>test</scope>
	    </dependency>

		<!--  log4j -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>2.12.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.11.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
		<dependency>
		    <groupId>log4j</groupId>
		    <artifactId>log4j</artifactId>
		    <version>1.2.17</version>
		</dependency>
		
		<!--  PRISM model checker -->
		<dependency>
			<groupId>org.modelChecker.prism</groupId>
			<artifactId>prism</artifactId>
			<version>4.5</version>
			<type>jar</type>
		</dependency>
		
 		<dependency>
			<groupId>org.modelChecker</groupId>
			<artifactId>jas</artifactId>
			<version>4.5</version>
			<type>jar</type>
		</dependency>
				
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.6</version>
			<scope>provided</scope>
		</dependency>	
		
	</dependencies>
	
	
	<!--  Build -->  
    <build>
 		<finalName>DECIDE</finalName>
    	
		
  		<plugins>
			<!-- download source code in Eclipse, best practice -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>false</downloadJavadocs>
				</configuration>
			</plugin>
			
			<!-- Set a compiler level -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			
			<!-- Maven Assembly Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<!-- get all project dependencies -->
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<!-- MainClass in mainfest make a executable jar -->
					<archive>
					  <manifest>
<!-- 						<mainClass>caseStudies.uuv.mainUUV</mainClass> -->
						<mainClass>caseStudies.healthcare.mainHealthcare</mainClass>

					  </manifest>
					  <manifestEntries>
                				<Class-Path>./resources/</Class-Path>
            			</manifestEntries>
					</archive>
 
				</configuration>
				<executions>
				  <execution>
					<id>make-assembly</id>
                    <!-- bind to the packaging phase -->
					<phase>package</phase> 
					<goals>
						<goal>single</goal>
					</goals>
				  </execution>
				</executions>
			</plugin>


			<!-- Resources managing plugin -->
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
		        	<version>2.7</version>
		        	<executions>
		          		<execution>
		            		<id>copy-resources</id>
		            		<!-- here the phase you need -->
				            <phase>package</phase>
				            <goals>
				              <goal>copy-resources</goal>
				            </goals>
				            <configuration>
				              <outputDirectory>${basedir}/target/resources/</outputDirectory>
				              <resources>          
				                <resource>
				                  <directory>resources</directory>
				                  <filtering>false</filtering>
				                </resource>
				              </resources>              
				            </configuration>
		          		</execution>
		          		<execution>
		            		<id>copy-models</id>
		            		<!-- here the phase you need -->
				            <phase>package</phase>
				            <goals>
				              <goal>copy-resources</goal>
				            </goals>
				            <configuration>
				              <outputDirectory>${basedir}/target/models/</outputDirectory>
				              <resources>          
				                <resource>
				                  <directory>models</directory>
				                  <filtering>false</filtering>
				                </resource>
				              </resources>              
				            </configuration>
		          		</execution>
		          		<execution>
		            		<id>copy-repo</id>
		            		<!-- here the phase you need -->
				            <phase>package</phase>
				            <goals>
				              <goal>copy-resources</goal>
				            </goals>
				            <configuration>
				              <outputDirectory>${basedir}/target/repo/</outputDirectory>
				              <resources>          
				                <resource>
				                  <directory>repo</directory>
				                  <filtering>false</filtering>
				                </resource>
				              </resources>              
				            </configuration>
		          		</execution>		        	
	          		</executions>
		      </plugin>
		      
		      
		    <!-- Testing plugin -->
		    <plugin>
		    	<groupId>org.apache.maven.plugins</groupId>
		    	<artifactId>maven-surefire-plugin</artifactId>
   	            <version>2.20</version>
	            <configuration>
	            	<skipTests>true</skipTests>
	                <argLine>-Djava.library.path=${project.basedir}/repo/prism-4.5</argLine>
	            </configuration>
		    </plugin>
			
  			
			<!-- Clean plugin  -->
			<plugin>
			    <artifactId>maven-clean-plugin</artifactId>
			    <version>2.6.1</version>
			    <configuration>
				      <filesets>
					        <fileset>
						        <directory>${basedir}</directory>
						        <includes>
						            <include>config.properties</include>
						        </includes>
					        	<followSymlinks>false</followSymlinks>
					        </fileset>
					       <!--  <fileset>
						        <directory>${basedir}/src/main/java</directory>
						        <excludes>
						            <exclude>/log4j.properties</exclude>
						        </excludes>
					        	<followSymlinks>false</followSymlinks>
					        </fileset>--> 
					        <fileset>
					        	<directory>${basedir}/target</directory>
					        	<includes>
					        		<include>**/config.properties</include>
					        	</includes>
					        	<followSymlinks>false</followSymlinks>
					        </fileset>
				      </filesets>
			    </configuration>
		  </plugin>
  			
  		</plugins>
	</build>  

</project>